# theseus

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  agent.py  agent_template.py  context.db  pyproject.toml  requirements.txt  run_aldric.py  run_tam.py  windows_surrogate.py
docs/: notes_on_organization.md  windows_surrogate_plan.md
docs/superpowers/plans/: 2026-06-15-theseus-agent.md  2026-06-16-theseus-composition-and-run-loop.md  2026-07-21-claude-provider-tool-calling.md
docs/superpowers/specs/: 2026-06-15-theseus-agent-design.md  2026-06-16-theseus-composition-and-run-loop-design.md  2026-07-13-agentic-memory-design.md  2026-07-13-decide-act-prompting-design.md  2026-07-13-theseus-packaging-design.md  2026-07-20-effector-to-tool-conversion-design.md  2026-07-21-claude-provider-tool-calling-design.md
src/agents/: aldric.py  simple_agent.py  tam.py
src/modules/: chat_cognitive_core.py  chat_effector.py  chat_observer.py  cognitive_core.py  cognitive_prompts.py  context_assembler.py  effector.py  theseus_agent.py  web_chat_ui_effector.py  web_chat_ui_observer.py  web_effector.py  web_observer.py
src/modules/actors/: naive_actor.py
src/modules/deciders/: llm_decider.py
src/modules/memory/: naive_context_assembler.py
src/modules/model_providers/: claude_provider.py  llama_cpp_provider.py  llama_provider.py  lm_studio_provider.py  model_provider.py  ollama_provider.py
src/theseus/: __init__.py  agentic_memory.py  chat_cognitive_core.py  chat_effector.py  chat_observer.py  cognitive_core.py  cognitive_prompts.py  context_assembler.py  json_utils.py  memory.py  memory_note.py  memory_prompts.py  memory_store.py  mono_memory.py  ooda_core.py  stimulus_log.py  web_chat_ui_effector.py  web_chat_ui_observer.py  working_memory.py
src/theseus/agents/: aldric.py  (+1 more)
tests/: test_agentic_memory.py  test_claude_provider.py  test_cognitive_core.py  test_cognitive_prompts.py  test_context_assembler.py  test_debug_pagination.py  test_debug_row_rendering.py  test_fact_retention.py  test_memory_prompts.py  test_memory_store.py  test_model_provider_tools.py  test_mono_memory.py  test_ooda_core.py  test_openrouter_provider.py  test_terminal_chat.py  test_theseus_agent.py  test_tool_runner.py  test_tools.py  test_web_chat.py
tests/e2e/: alty_mcgee_tests.py
(+40 files in other folders)
