[project]
name = "theseus"
version = "0.4.0"
description = "A modular construction kit for cognitive language agents"
authors = [
    { name = "George Lautenschlager", email = "georgelautenschlager@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai (>=1,<3)",
    "fastapi (>=0.110,<1)",
    "uvicorn (>=0.29,<1)",
    "jinja2 (>=3.1,<4)",
    "python-multipart (>=0.0.9)",
    "ipdb (>=0.13.13,<0.14.0)",
]

[project.scripts]
alty = "theseus.agents.alty_mcgee:main"

[tool.poetry]
packages = [{ include = "theseus", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8"

# Screen-capture deps for surrogates; install with `poetry install --with surrogates`.
[tool.poetry.group.surrogates]
optional = true

[tool.poetry.group.surrogates.dependencies]
pillow = ">=10"

# Heavy eval-only deps (pulls in torch); install with `poetry install --with eval`.
[tool.poetry.group.eval]
optional = true

[tool.poetry.group.eval.dependencies]
sentence-transformers = ">=3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
